kubernetes/infrastructure/overlays/staging/patches/replica-count.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
spec:
  replicas: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: compute
spec:
  replicas: 1
