kubernetes/infrastructure/overlays/staging/patches/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okiru-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: okiru-staging.20.164.101.114.nip.io
      http:
        paths:
          - path: /api/clients
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5001
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api
                port:
                  number: 5000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 5001
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: okiru-ingress-compute
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
    - host: okiru-staging.20.164.101.114.nip.io
      http:
        paths:
          - path: /compute(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: compute
                port:
                  number: 8000
